Made it more mobile friendly

--- a/public/contact.html
+++ b/public/contact.html
@@ -44,6 +44,7 @@
                 </div>
               </nav>
               <!-- Default form contact -->
+              <div class="body-section">
 <form class="text-center border border-light p-5" action="#!">
 
         <p class="h4 mb-4 text-white">Contact Me!</p>
@@ -79,7 +80,9 @@
         <button class="btn btn-info winter-neva-gradient btn-block" type="submit">Send</button>
     
     </form>
+  </div>
     <!-- Default form contact -->
+
 
       <!-- Footer -->
       <footer class="page-footer font-small blue-gradient pt-4 fixed-bottom">
